--- a/service-a/values.yaml
+++ b/service-a/values.yaml
@@ -8,17 +8,17 @@ image:
   # set repository url jika menggunakan private repo non docker hub / atau bisa set image name saja jika menggunakan image yg berada di repo docker registry 
   # repository: 491248485740.dkr.ecr.ap-southeast-1.amazonaws.com/mw-xms
   # repository: ubuntu
-  repository: ""
+  repository: "nginx"
 
   # set tag docker image
   # tag: 20.04
-  tag: latest
+  tag: "1.14.2"
 
 # config dibawah untuk menambahkan label pada resource deployment,pods,service dan service2 lain yang ada di template
 meta:
-  env: ""
-  maintainer: ""
-  version: ""
+  env: "dev"
+  maintainer: "sekolahlinux"
+  version: "1.14.2"
 
 # config dibawah digunakan untuk resource template deployment.yaml
 server:
